# lambda-with-event-bridge

./: Cargo.toml  README.md
src/: main.rs  mongo.rs  s3upload.rs  web_scraper.rs
