[package]
name = "event-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.1"
scraper = "0.22"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
indicatif = "0.17.9"
mongodb = "3.1.1"
aws-sdk-s3 = "1.66.0"
aws-config = "1.5"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
dotenv = "0.15.0"
rand = "0.8.5"